dependencies/policies/reduce-resources-requests/.chainsaw-test/reduce-requests/enterprise/resources/pod-enterprise-not-to-mutate.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: enterprise-pod
  labels:
    tekton.dev/task: verify-enterprise-contract
spec:
  containers:
  - image: bash
    name: enterprise-pod
    resources: {}
