dependencies/policies/reduce-resources-requests/tekton-pr-taskrun-reduce-resources-enterprise-binding.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingAdmissionPolicyBinding
metadata:
  name: tekton-pr-taskrun-reduce-resource-enterprise.konflux-ci.dev
spec:
  matchResources:
    objectSelector:
      matchLabels:
        tekton.dev/task: verify-enterprise-contract
  policyName: tekton-pr-taskrun-reduce-resource.konflux-ci.dev
