dependencies/policies/reduce-resources-requests/.chainsaw-test/reduce-requests/enterprise/chainsaw-test.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: resource-set-on-pod-enterprise-mem
spec:
  description: |
    pod with suffix, enterprise label, and a container with memory set is updated
  concurrent: false
  namespace: 'matching-pod-mem'
  steps:
  - name: given-mutatingadmissionpolicy-is-installed
    try:
    - apply:
        file: ../../../tekton-pr-taskrun-reduce-resources.yaml
    - apply:
        file: ../../../tekton-pr-taskrun-reduce-resources-enterprise-binding.yaml
    - sleep:
        duration: 1s
  - name: when-pod-is-created
    try:
    - apply:
        file: resources/pod-enterprise-to-mutate-mem.yaml
  - name: then-pod-is-mutated
    try:
    - assert:
        file: resources/pod-enterprise-mutated.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: resource-set-on-pod-enterprise-cpu
spec:
  description: |
    pod with suffix, enterprise label, and a container with cpu set is updated
  concurrent: false
  namespace: 'matching-pod-cpu'
  steps:
  - name: given-mutatingadmissionpolicy-is-installed
    try:
    - apply:
        file: ../../../tekton-pr-taskrun-reduce-resources.yaml
    - apply:
        file: ../../../tekton-pr-taskrun-reduce-resources-enterprise-binding.yaml
    - sleep:
        duration: 1s
  - name: when-pod-is-created
    try:
    - apply:
        file: resources/pod-enterprise-to-mutate-cpu.yaml
  - name: then-pod-is-mutated
    try:
    - assert:
        file: resources/pod-enterprise-mutated.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: resource-not-set-on-pod-enterprise-without-resources
spec:
  description: |
    pod with suffix, enterprise label, and no container with cpu or memory set is not updated
  concurrent: false
  namespace: 'not-matching-pod'
  steps:
  - name: given-mutatingadmissionpolicy-is-installed
    try:
    - apply:
        file: ../../../tekton-pr-taskrun-reduce-resources.yaml
    - apply:
        file: ../../../tekton-pr-taskrun-reduce-resources-enterprise-binding.yaml
    - sleep:
        duration: 1s
  - name: when-pod-is-created
    try:
    - apply:
        file: resources/pod-enterprise-not-to-mutate.yaml
  - name: then-pod-is-not-mutated
    try:
    - assert:
        file: resources/pod-enterprise-not-to-mutate.yaml
